# SoliDeoGloria.ai

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cab_benchmark/: __init__.py  aggregator.py  cli.py  evaluator.py  loader.py  scorer.py
data/: CAB_v2_Dataset_965.json
docs/: DIMENSIONS.md  METHODOLOGY.md  SCHEMA.md  TRADITIONS.md
examples/: basic_evaluation.py  full_evaluation_anthropic.py  full_evaluation_openai.py
rubrics/: objective_scoring.md  subjective_scoring.md
tests/: test_loader.py
